force-app/main/default/objects/Eval_Unit_Details__c/Eval_Unit_Details__c.object-meta.xml
<CustomObject>
    <label>Eval Unit Details</label>
    <nameField>
        <label>Serial Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Eval Unit Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>