force-app/main/default/objects/Eval_Unit_Details__c/fields/Courier_Info__c.field-meta.xml
<CustomField>
    <fullName>Courier_Info__c</fullName>
    <label>Courier Info</label>
    <length>50</length>
    <type>Text</type>
</CustomField>