force-app/main/default/objects/Eval_Unit_Details__c/fields/Eval_Owner__c.field-meta.xml
<CustomField>
    <fullName>Eval_Owner__c</fullName>
    <description>needed for transfering products</description>
    <formula>Eval_Request__r.Evaluation_Owner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eval Owner</label>
    <type>Text</type>
</CustomField>