force-app/main/default/objects/Eval_Unit_Details__c/fields/Eval_Price_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Eval_Price_Adjustment__c</fullName>
    <formula>Evaluation_Price__c &lt;&gt;  Evaluation_Price_Text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eval Price Adjustment</label>
    <type>Checkbox</type>
</CustomField>