force-app/main/default/objects/Eval_Unit_Details__c/fields/Eval_Price_Low__c.field-meta.xml
<CustomField>
    <fullName>Eval_Price_Low__c</fullName>
    <label>Eval Price Low</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>