force-app/main/default/objects/Eval_Unit_Details__c/fields/Eval_Quote__c.field-meta.xml
<CustomField>
    <fullName>Eval_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Eval Quote</label>
    <referenceTo>Eval_Quote__c</referenceTo>
    <relationshipLabel>Eval Unit Details</relationshipLabel>
    <relationshipName>Eval_Unit_Details</relationshipName>
    <type>Lookup</type>
</CustomField>