force-app/main/default/objects/Eval_Unit_Details__c/fields/Eval_Request__c.field-meta.xml
<CustomField>
    <fullName>Eval_Request__c</fullName>
    <label>Eval Request</label>
    <referenceTo>Eval_Request__c</referenceTo>
    <relationshipName>Eval_Unit_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>