force-app/main/default/objects/Eval_Unit_Details__c/fields/Eval_Request_Role__c.field-meta.xml
<CustomField>
    <fullName>Eval_Request_Role__c</fullName>
    <formula>Eval_Request__r.CreatedBy.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eval Request Role</label>
    <type>Text</type>
</CustomField>