force-app/main/default/objects/Eval_Unit_Details__c/fields/Eval_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Eval_Request_Status__c</fullName>
    <formula>text( Eval_Request__r.Product_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eval Request Status</label>
    <type>Text</type>
</CustomField>