force-app/main/default/objects/Eval_Unit_Details__c/fields/Eval_Submitter_Email__c.field-meta.xml
<CustomField>
    <fullName>Eval_Submitter_Email__c</fullName>
    <label>Eval Submitter Email</label>
    <type>Email</type>
</CustomField>