force-app/main/default/objects/Eval_Unit_Details__c/fields/EvalSerialName__c.field-meta.xml
<CustomField>
    <fullName>EvalSerialName__c</fullName>
    <description>unique name of units to avoid duplicates created by oracle/informatica sync in error</description>
    <label>EvalSerialName</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>