force-app/main/default/objects/Eval_Unit_Details__c/fields/Evaluation_Price_Text__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Price_Text__c</fullName>
    <label>Evaluation Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>