force-app/main/default/objects/Eval_Unit_Details__c/fields/Extension__c.field-meta.xml
<CustomField>
    <fullName>Extension__c</fullName>
    <formula>value(IF(today() -  Eval_Request__r.Return_Date__c &gt;= 30 &amp;&amp; today() -  Eval_Request__r.Return_Date__c &lt; 59, &quot;1&quot;,
(if(today() - Eval_Request__r.Return_Date__c &gt;= 60 &amp;&amp; today() - Eval_Request__r.Return_Date__c &lt; 89, &quot;2&quot;, 
(if(today() - Eval_Request__r.Return_Date__c &gt;= 90 &amp;&amp; today() - Eval_Request__r.Return_Date__c &lt; 119, &quot;3&quot;,
(if(today() - Eval_Request__r.Return_Date__c &gt;= 120 &amp;&amp; today() - Eval_Request__r.Return_Date__c &lt; 149, &quot;4&quot;,
(if(today() - Eval_Request__r.Return_Date__c &gt;= 150 &amp;&amp; today() - Eval_Request__r.Return_Date__c &lt; 179, &quot;5&quot;,
(if(today() - Eval_Request__r.Return_Date__c &gt;= 180 &amp;&amp; today() - Eval_Request__r.Return_Date__c &lt; 209, &quot;2&quot;, &quot;&quot;))))))))))))</formula>
    <label>Extension</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>