force-app/main/default/objects/Eval_Unit_Details__c/fields/Extension_Date__c.field-meta.xml
<CustomField>
    <fullName>Extension_Date__c</fullName>
    <formula>null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Extension Date</label>
    <type>Date</type>
</CustomField>