force-app/main/default/objects/Eval_Unit_Details__c/fields/Force_Agreeement__c.field-meta.xml
<CustomField>
    <fullName>Force_Agreeement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Force Agreeement</label>
    <type>Checkbox</type>
</CustomField>