force-app/main/default/objects/Eval_Unit_Details__c/fields/Long_Id__c.field-meta.xml
<CustomField>
    <fullName>Long_Id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>Long Id</label>
    <type>Text</type>
</CustomField>