force-app/main/default/objects/Eval_Unit_Details__c/fields/Low_Eval_Price__c.field-meta.xml
<CustomField>
    <fullName>Low_Eval_Price__c</fullName>
    <formula>IF(Special_Eval_Price__c &gt; 0, Special_Eval_Price__c, Eval_Price_Low__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Low Eval Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>