force-app/main/default/objects/Eval_Unit_Details__c/fields/noEvalPrice__c.field-meta.xml
<CustomField>
    <fullName>noEvalPrice__c</fullName>
    <formula>isblank(Evaluation_Price__c ) || Evaluation_Price__c &lt; 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>noEvalPrice</label>
    <type>Checkbox</type>
</CustomField>