force-app/main/default/objects/Eval_Unit_Details__c/fields/Oracle_Received__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Received__c</fullName>
    <label>Oracle Received</label>
    <length>100</length>
    <type>Text</type>
</CustomField>