force-app/main/default/objects/Eval_Unit_Details__c/fields/Product_2__c.field-meta.xml
<CustomField>
    <fullName>Product_2__c</fullName>
    <description>First 2 digits of SKU</description>
    <formula>left( SKU__r.ProductCode ,2)</formula>
    <label>Product 2</label>
    <type>Text</type>
</CustomField>