force-app/main/default/objects/Eval_Unit_Details__c/fields/Product_Class__c.field-meta.xml
<CustomField>
    <fullName>Product_Class__c</fullName>
    <label>Product Class</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>