force-app/main/default/objects/Eval_Unit_Details__c/fields/Product_Pillar__c.field-meta.xml
<CustomField>
    <fullName>Product_Pillar__c</fullName>
    <formula>SKU__r.Product_Line__r.Name</formula>
    <label>Product Pillar</label>
    <type>Text</type>
</CustomField>