force-app/main/default/objects/Eval_Unit_Details__c/fields/Product_Purchase_Invoiced_Date__c.field-meta.xml
<CustomField>
    <fullName>Product_Purchase_Invoiced_Date__c</fullName>
    <label>Product Purchase/Invoiced Date</label>
    <type>Date</type>
</CustomField>