force-app/main/default/objects/Eval_Unit_Details__c/fields/Product_Return_Date__c.field-meta.xml
<CustomField>
    <fullName>Product_Return_Date__c</fullName>
    <label>Product Return Date</label>
    <type>Date</type>
</CustomField>