force-app/main/default/objects/Eval_Unit_Details__c/fields/Product_type__c.field-meta.xml
<CustomField>
    <fullName>Product_type__c</fullName>
    <formula>text(  SKU__r.Family  )</formula>
    <label>Product type</label>
    <type>Text</type>
</CustomField>