force-app/main/default/objects/Eval_Unit_Details__c/fields/Product_Type_Text__c.field-meta.xml
<CustomField>
    <fullName>Product_Type_Text__c</fullName>
    <label>Product Type Text</label>
    <length>100</length>
    <type>Text</type>
</CustomField>