force-app/main/default/objects/Eval_Unit_Details__c/fields/Product_TypeText__c.field-meta.xml
<CustomField>
    <fullName>Product_TypeText__c</fullName>
    <label>Product Pillar Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>