force-app/main/default/objects/Eval_Unit_Details__c/fields/Quote_Product__c.field-meta.xml
<CustomField>
    <fullName>Quote_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quote Product</label>
    <type>Checkbox</type>
</CustomField>