force-app/main/default/objects/Eval_Unit_Details__c/fields/Reason_for_write_off__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_write_off__c</fullName>
    <description>Write-off reason for Sales to select</description>
    <label>Reason for write-off</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer no longer exist</fullName>
            </value>
            <value>
                <fullName>Ex-Employee</fullName>
            </value>
            <value>
                <fullName>Giveaway/Donation</fullName>
            </value>
            <value>
                <fullName>Long term demo - customer site</fullName>
            </value>
            <value>
                <fullName>Lost track at customer end</fullName>
            </value>
            <value>
                <fullName>Swap Service/Product</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>