force-app/main/default/objects/Eval_Unit_Details__c/fields/Recycle_Fee__c.field-meta.xml
<CustomField>
    <fullName>Recycle_Fee__c</fullName>
    <description>Product Recycle fees based on Billing State (Quote)</description>
    <label>Recycle Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>