force-app/main/default/objects/Eval_Unit_Details__c/fields/recycle_fee_num__c.field-meta.xml
<CustomField>
    <fullName>recycle_fee_num__c</fullName>
    <formula>Recycle_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>recycle fee num</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>