force-app/main/default/objects/Eval_Unit_Details__c/fields/Return_Shipping_Date__c.field-meta.xml
<CustomField>
    <fullName>Return_Shipping_Date__c</fullName>
    <label>Return Shipping Date</label>
    <type>Date</type>
</CustomField>