force-app/main/default/objects/Eval_Unit_Details__c/fields/Return_Shipping_Request__c.field-meta.xml
<CustomField>
    <fullName>Return_Shipping_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Return_Shipping_Request</label>
    <type>Checkbox</type>
</CustomField>