force-app/main/default/objects/Eval_Unit_Details__c/fields/Return_Tracking_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Return_Tracking_Carrier__c</fullName>
    <label>Return Tracking Carrier</label>
    <length>200</length>
    <type>Text</type>
</CustomField>