force-app/main/default/objects/Eval_Unit_Details__c/fields/Return_Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Return_Tracking_Number__c</fullName>
    <label>Return Tracking Number</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>