force-app/main/default/objects/Eval_Unit_Details__c/fields/Returned__c.field-meta.xml
<CustomField>
    <fullName>Returned__c</fullName>
    <formula>if(text( Status__c )= &apos;Product Returned&apos;,&apos;Returned/Purchased&apos;,
if(text( Status__c )= &apos;Product Returned in Oracle&apos;,&apos;Returned/Purchased&apos;,
if(text( Status__c )= &apos;Purchased&apos;,&apos;Returned/Purchased&apos;,
if(text( Status__c )= null,&apos;Outstanding&apos;,
if(text( Status__c )= &apos;Canadian Eval - Shipped&apos;,&apos;Canadian&apos;,
if(text( Status__c )= &apos;Canadian Eval Returned&apos;,&apos;Canadian&apos;,
if(text( Status__c )= &apos;Canadian Product Returned&apos; ,&apos;Canadian&apos;,
if(text( Status__c )= &apos;Canadian Eval – Shipped&apos; ,&apos;Canadian&apos;,
if(text( Status__c )= &apos;Product Invoiced&apos;,&apos;Outstanding&apos;,
if(text( Status__c )= &apos;Write-off&apos;,&apos;Write Off&apos;,
&apos;Unknown&apos;))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>