force-app/main/default/objects/Eval_Unit_Details__c/fields/Returned_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Returned_Purchased__c</fullName>
    <formula>if(Returned__c  = &apos;Returned/Purchased&apos;,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Returned/Purchased</label>
    <type>Checkbox</type>
</CustomField>