force-app/main/default/objects/Eval_Unit_Details__c/fields/RMA__c.field-meta.xml
<CustomField>
    <fullName>RMA__c</fullName>
    <externalId>true</externalId>
    <label>RMA #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>