force-app/main/default/objects/Eval_Unit_Details__c/fields/RMA_For_Email__c.field-meta.xml
<CustomField>
    <fullName>RMA_For_Email__c</fullName>
    <formula>value(RMA__c)</formula>
    <label>RMA For Email</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>