force-app/main/default/objects/Eval_Unit_Details__c/fields/rma_trimmed__c.field-meta.xml
<CustomField>
    <fullName>rma_trimmed__c</fullName>
    <formula>left(RMA__c,7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>rma_trimmed</label>
    <type>Text</type>
</CustomField>