force-app/main/default/objects/Eval_Unit_Details__c/fields/Shipping_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Contact_Email__c</fullName>
    <label>Shipping Contact Email</label>
    <type>Email</type>
</CustomField>