force-app/main/default/objects/Eval_Unit_Details__c/fields/SKU__c.field-meta.xml
<CustomField>
    <fullName>SKU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Testing Field. Will pull from product</inlineHelpText>
    <label>SKU</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Product_Unit_Details</relationshipName>
    <type>Lookup</type>
</CustomField>