force-app/main/default/objects/Eval_Unit_Details__c/fields/Sku_Alt_Name__c.field-meta.xml
<CustomField>
    <fullName>Sku_Alt_Name__c</fullName>
    <formula>left(Sku_Text__c, len(Sku_Text__c ) -2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sku Alt Name</label>
    <type>Text</type>
</CustomField>