force-app/main/default/objects/Eval_Unit_Details__c/fields/Sku_Text__c.field-meta.xml
<CustomField>
    <fullName>Sku_Text__c</fullName>
    <label>Sku Text</label>
    <length>200</length>
    <type>Text</type>
</CustomField>