force-app/main/default/objects/Eval_Unit_Details__c/fields/Special_Eval_Price__c.field-meta.xml
<CustomField>
    <fullName>Special_Eval_Price__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Special Eval Price to Overwrite if needed to sell for special price</description>
    <label>Special_Eval_Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>