force-app/main/default/objects/Eval_Unit_Details__c/fields/Status_canada_shipp__c.field-meta.xml
<CustomField>
    <fullName>Status_canada_shipp__c</fullName>
    <formula>text(Status__c)=&apos;Canadian Eval – Shipped&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status canada shipp</label>
    <type>Checkbox</type>
</CustomField>