force-app/main/default/objects/Eval_Unit_Details__c/fields/Status_Date_Change__c.field-meta.xml
<CustomField>
    <fullName>Status_Date_Change__c</fullName>
    <label>Status Date Change</label>
    <type>Date</type>
</CustomField>