force-app/main/default/objects/Eval_Unit_Details__c/fields/Tracking_NumberLink__c.field-meta.xml
<CustomField>
    <fullName>Tracking_NumberLink__c</fullName>
    <description>Link to check tracking information</description>
    <formula>HYPERLINK(&apos;http://www.fedex.com/Tracking?ascend_header=1&amp;clienttype=dotcom&amp;cntry_code=us&amp;language=english&amp;tracknumbers=&apos;&amp;left(Tracking_Number__c,12), &apos;FedEx Tracking&apos;)</formula>
    <inlineHelpText>Link to check tracking information</inlineHelpText>
    <label>Tracking Number</label>
    <type>Text</type>
</CustomField>