force-app/main/default/objects/Eval_Unit_Details__c/fields/Transfer_Requested__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transfer Requested</label>
    <type>Checkbox</type>
</CustomField>