force-app/main/default/objects/Eval_Unit_Details__c/fields/Unit_Selected__c.field-meta.xml
<CustomField>
    <fullName>Unit_Selected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unit Selected</label>
    <type>Checkbox</type>
</CustomField>