force-app/main/default/objects/Eval_Unit_Details__c/fields/Unit_Transfered_From_Request__c.field-meta.xml
<CustomField>
    <fullName>Unit_Transfered_From_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the eval request that the product was previously transferred from</description>
    <label>Unit Transfered From Request</label>
    <referenceTo>Eval_Request__c</referenceTo>
    <relationshipLabel>Eval Unit Details (Unit Transfered From Request)</relationshipLabel>
    <relationshipName>Eval_Unit_Details1</relationshipName>
    <type>Lookup</type>
</CustomField>