force-app/main/default/objects/Eval_Unit_Details__c/fields/Use_Special_Price__c.field-meta.xml
<CustomField>
    <fullName>Use_Special_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check Box to Determine if the special Price entered need to be put in the quote or not</description>
    <label>Use Special Price</label>
    <type>Checkbox</type>
</CustomField>