force-app/main/default/objects/Eval_Unit_Details__c/fields/Write_Off__c.field-meta.xml
<CustomField>
    <fullName>Write_Off__c</fullName>
    <formula>if(text( Status__c )=&apos;Write-Off&apos;,true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Write Off</label>
    <type>Checkbox</type>
</CustomField>