force-app/main/default/objects/Eval_Unit_Details__c/fields/Write_Off_Amount_Last_Month__c.field-meta.xml
<CustomField>
    <fullName>Write_Off_Amount_Last_Month__c</fullName>
    <formula>if( Write_Off_Last_Month__c = true,  Evaluation_Price__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Write Off Amount Last Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>