force-app/main/default/objects/Eval_Unit_Details__c/fields/Write_Off_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Write_Off_Approval_Status__c</fullName>
    <formula>text(Eval_Request__r.Write_Off_Response__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Write Off Approval Status</label>
    <type>Text</type>
</CustomField>