force-app/main/default/objects/Eval_Unit_Details__c/fields/Write_off_Approved__c.field-meta.xml
<CustomField>
    <fullName>Write_off_Approved__c</fullName>
    <formula>text( Eval_Request__r.Write_Off_Response__c )=&apos;approved&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Write off Approved</label>
    <type>Checkbox</type>
</CustomField>