force-app/main/default/objects/Eval_Unit_Details__c/fields/Write_Off_Date__c.field-meta.xml
<CustomField>
    <fullName>Write_Off_Date__c</fullName>
    <label>Prodcut Write Off Date</label>
    <type>Date</type>
</CustomField>