force-app/main/default/objects/Eval_Unit_Details__c/fields/Write_Off_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Write_Off_Explanation__c</fullName>
    <label>Write Off Explanation</label>
    <length>200</length>
    <type>Text</type>
</CustomField>