force-app/main/default/objects/Eval_Unit_Details__c/fields/Write_Off_Last_12_Months__c.field-meta.xml
<CustomField>
    <fullName>Write_Off_Last_12_Months__c</fullName>
    <formula>Write_Off_Date__c + 365 &gt; today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Write Off Last 12 Months</label>
    <type>Checkbox</type>
</CustomField>