force-app/main/default/objects/Eval_Unit_Details__c/fields/Write_Off_Last_Month__c.field-meta.xml
<CustomField>
    <fullName>Write_Off_Last_Month__c</fullName>
    <formula>month(Write_Off_Date__c ) + 1 = month(today())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Write Off Last Month</label>
    <type>Checkbox</type>
</CustomField>