force-app/main/default/objects/Eval_Unit_Details__c/fields/Write_off_Reason__c.field-meta.xml
<CustomField>
    <fullName>Write_off_Reason__c</fullName>
    <label>Write-off Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer no longer exist</fullName>
            </value>
            <value>
                <fullName>Ex Employee</fullName>
            </value>
            <value>
                <fullName>Giveaway/Donation</fullName>
            </value>
            <value>
                <fullName>Long term demo - customer site</fullName>
            </value>
            <value>
                <fullName>Lost track at customer end</fullName>
            </value>
            <value>
                <fullName>Lost track at ViewSonic end</fullName>
            </value>
            <value>
                <fullName>Office Use</fullName>
            </value>
            <value>
                <fullName>Returned</fullName>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
            <value>
                <fullName>Swap Service/Product</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Damaged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>