force-app/main/default/objects/Eval_Unit_Details__c/fields/writeoffRequest__c.field-meta.xml
<CustomField>
    <fullName>writeoffRequest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>writeoffRequest</label>
    <type>Checkbox</type>
</CustomField>