force-app/main/default/objects/Eval_Unit_Details__c/validationRules/Sku_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Sku_is_required</fullName>
    <active>false</active>
    <errorConditionFormula>isblank(SKU__c )&amp;&amp;isnew()</errorConditionFormula>
    <errorMessage>A SKU must be entered</errorMessage>
</ValidationRule>