force-app/main/default/objects/Eval_Unit_Details__c/validationRules/Tracking_Cannot_be_purchase.validationRule-meta.xml
<ValidationRule>
    <fullName>Tracking_Cannot_be_purchase</fullName>
    <active>true</active>
    <errorConditionFormula>CONTAINS(Tracking_Number__c,&apos;purchase&apos;) ||
CONTAINS(Tracking_Number__c,&apos;invoice&apos;)</errorConditionFormula>
    <errorMessage>Eval Purchases cannot be inserted or created</errorMessage>
</ValidationRule>