force-app/main/default/objects/Eval_Unit_Details__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Standard_Price__c</columns>
    <columns>SKU__c</columns>
    <columns>Sku_Text__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sku_Text__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>SKU__c</field>
        <operation>equals</operation>
    </filters>
    <label>All</label>
</ListView>